...
    <string name="provider_hide_api_key">Hide API key</string>
    <string name="file_download">Download file</string>
    <string name="file_download_saved">File saved</string>
    <string name="file_download_failed">Could not save file</string>
    <string name="file_attach_next_message">Attach file to next message</string>
    <string name="file_remove_next_message">Remove file from next message</string>
    <string name="video_fullscreen">Open fullscreen video</string>
    <string name="video_exit_fullscreen">Exit fullscreen video</string>
    <string name="provider_multiple_api_keys">Multiple API Keys</string>
    <string name="provider_manage_api_keys">Manage API Keys</string>
    <string name="provider_edit_api_key">Edit API Key</string>
    <string name="provider_add_api_key">Add API key</string>
    <string name="provider_save_api_key">Save API key</string>
...
